# meshFields

./: CMakeLists.txt  Doxyfile.in  Doxyfile_internal.in  MeshField.hpp  README.md  config.cmake.in  typeErasureAPI.cpp
.github/workflows/: cmake.yml  coverage.yml  doxygen-gh-pages.yml  formatCheck.yml  pr_comment_trigger_self_hosted.yml
docs/: MeshFields.dox  Ordering.tex  Structure.txt  addingShapeFunctions.md  error.txt  error_narrow.txt  notes.txt  notes2.txt  pumiFieldNotes.md  summarizeMD
docs/integrationSandbox/: CMakeLists.txt  README.md  testCallBack.cc
mfemTest/: IntegratorMfemLargeTest.cpp  IntegratorMfemTest.cpp  README.md  box.mesh  square.mesh
pumiTest/getCompEx/: CMakeLists.txt  README.md  getCompEx.cpp
src/: .MeshField_Shape.hpp.swp  CabanaController.hpp  CabanaSliceWrapper.hpp  KokkosController.hpp  KokkosSliceWrapper.hpp  MeshField.hpp  MeshField_Config.hpp.in  MeshField_Defines.hpp  MeshField_Element.hpp  MeshField_Fail.cpp  MeshField_Fail.hpp  MeshField_Field.hpp  MeshField_For.hpp  MeshField_Integrate.cpp  MeshField_Integrate.hpp  MeshField_Macros.hpp  MeshField_Reduce.hpp  MeshField_SPR_ErrorEstimator.hpp  MeshField_Scan.hpp  MeshField_Shape.hpp  MeshField_ShapeField.hpp  MeshField_SimdFor.hpp  MeshField_Utility.hpp  SliceWrapper.hpp  test.hpp
test/: .testOmegahElement.cpp.swp  MeshField.cpp  SliceWrapper.cpp  test.cpp  testBoxIntegrator.cpp  testCabana.cpp  testClangMinimal.cpp  testControllerPerformance.cpp  testCountIntegrator.cpp  testElement.cpp  testElementJacobian1d.cpp  testElementJacobian2d.cpp  testElementJacobian3d.cpp  testExceptions.cpp  testIntegrator.cpp  testKokkos.cpp  testMain.cpp  testMeshField.cpp  testOmegahCoordField.cpp  testOmegahElement.cpp  testOmegahTet.cpp  testOmegahTri.cpp  testPointMapping.cpp  testQR.cpp  testReducedQuinticImplicitEvaluate.cpp  testReducedQuinticImplicitIntegrator.cpp  testSerialize.cpp  testSerializeFive.cpp  testSerializeFour.cpp  testSerializeThree.cpp  testSerializeTwo.cpp  testSliceWrapper.cpp  testSprThwaitesAdapt.cpp  testTet.cpp
