cmake_minimum_required(VERSION 3.5)
project(getCompEx VERSION 1.0.0 LANGUAGES CXX)
set(SCOREC_PREFIX "" CACHE STRING "Directory where SCOREC is installed")
if (SCOREC_PREFIX)
  find_package(SCOREC 4 REQUIRED CONFIG PATHS ${SCOREC_PREFIX} NO_DEFAULT_PATH)
else()
  find_package(SCOREC 4 REQUIRED CONFIG)
endif()
add_executable(getCompEx getCompEx.cpp)
target_link_libraries(getCompEx PUBLIC SCOREC::core)
